feat: request traslate

--- a/src/views/templates/index.html
+++ b/src/views/templates/index.html
@@ -1,4 +1,3 @@
-<!-- views/templates/index.html -->
 <html>
 <head>
   <meta charset="UTF-8">
@@ -31,11 +30,11 @@
           <li class="row to">
             <select name="translate-to">
               {% for language in languages %}
-                <option value="{{ language.acronym|lower }}" {% if language.acronym|lower == translate_to %}selected{% endif %}>
-                  {{ language.name|upper }}
-                </option>
+              <option
+              value="{{ language.acronym }}"
+              {% if language.acronym == translate_to %} selected
+              {% endif %}>{{ language.name | upper }}</option>
               {% endfor %}
-              </option> 
             </select>
           </li>
         </ul>
